syntax = "proto3";

option go_package = "gen-proto/room_type_pb;room_type_pb";

service RoomTypeService {
    rpc GetRoomTypeById(GetRoomTypeByIdRequest) returns (GetRoomTypeByIdResponse);
    rpc GetRoomTypesByHotelId(GetRoomTypesByHotelIdRequest) returns (GetRoomTypesByHotelIdResponse);
    rpc CreateRoomType(CreateRoomTypeRequest) returns (CreateRoomTypeResponse);
    rpc DeleteRoomTypeById(DeleteRoomTypeByIdRequest) returns (DeleteRoomTypeByIdResponse);
}

message RoomType {
    string id = 1;
    string name = 2;
    uint32 price = 3;
    string hotel_id = 4;
}

message GetRoomTypeByIdRequest {
    string id = 1;
}

message GetRoomTypeByIdResponse {
    RoomType roomType = 1;
}

message GetRoomTypesByHotelIdRequest {
    string hotel_id = 1;
}

message GetRoomTypesByHotelIdRow {
    string id = 1;
    string name = 2;
    uint32 price = 3;
    string hotel_id = 4;
    uint32 number_of_rooms = 5;
}

message GetRoomTypesByHotelIdResponse {
    repeated GetRoomTypesByHotelIdRow roomTypes = 1;
}

message CreateRoomTypeRequest{
    string name = 1;
    int32 price = 2;
    string hotel_id = 3;
}

message CreateRoomTypeResponse{
    
}

message DeleteRoomTypeByIdRequest{
    string id = 1;
}

message DeleteRoomTypeByIdResponse{
    
}